--- a/templates/warehouse/store_detail.html
+++ b/templates/warehouse/store_detail.html
@@ -3,7 +3,7 @@
 {% block title %}Store Detail{% endblock %}
 
 {% block content %}
-{% include 'warehouse/_navbar_store.html' %}
+{% include 'warehouse/_navbar.html' %}
 <div class="container mt-5">
     <div class="card mb-4">
         <div class="card-body">
