--- a/templates/_navbar.html
+++ b/templates/_navbar.html
@@ -35,7 +35,7 @@
       class="navbar-button {% if active_page == 'warehouse_page' %}active{% endif %}"
       ><i class="fas fa-warehouse"></i></a>
 
-    <a href="{% url 'stores' %}"
+    <a href="{% url 'warehouse_stores' %}"
       class="navbar-button {% if active_page == 'stores_page' %}active{% endif %}"
       ><i class="fas fa-store"></i> </a>
       
