--- a/templates/warehouse/store_detail.html
+++ b/templates/warehouse/store_detail.html
@@ -42,7 +42,7 @@
     </div>
 
     <div class="mt-4">
-        <a href="{% url 'wareHouse' store.warehouse.id %}" class="btn btn-secondary">Back to Warehouse</a>
+        <a href="{% url 'wareHouse' store.warehouse.uuid %}" class="btn btn-secondary">Back to Warehouse</a>
     </div>
 </div>
 {% endblock %}
