Have add the footer

--- a/templates/general/main.html
+++ b/templates/general/main.html
@@ -37,4 +37,5 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.bundle.min.js"></script>
     {% block script %}{% endblock %}
   </body>
+  {% include '_footer.html' %}
 </html>
