--- a/templates/warehouse/wareHouse.html
+++ b/templates/warehouse/wareHouse.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
     <link rel="stylesheet" href="{% static 'css/warehouse.css' %}" />
     <link rel="stylesheet" href="{% static 'css/navbar.css' %}" />
+    <link rel="icon" href="{% static 'brands/favicon.ico' %}" type="image/x-icon" />
 </head>
 <body>
     {% block content %}
@@ -307,4 +308,5 @@
     
     {% endblock %}
 </body>
+{% include "_footer.html" %}
 </html>
