--- a/templates/store/stores.html
+++ b/templates/store/stores.html
@@ -52,4 +52,5 @@
     <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
     {% endblock %}
 </body>
+{% include "_footer.html" %}
 </html>
