--- a/templates/warehouse/wareHouse.html
+++ b/templates/warehouse/wareHouse.html
@@ -16,7 +16,7 @@
     {% block content %}
     {% include "warehouse/_navbar.html" %}
     
-    <div class="container mt-4">    
+    <div class="container-fluid mt-4">    
         <!-- Alert Container -->
         <div id="alert-container" class="mb-4"></div>
     
@@ -64,7 +64,7 @@
         </div>
         <!-- End Modal -->
     
-        <div class="view-box">
+        <div class="container-fluid"> 
             <div class="center-side" style="display: flex;">
                 {% if not is_from_all %}
                 <h1>{{ warehouse.name }}</h1>
@@ -88,8 +88,9 @@
                 <h2 id="store-name"></h2>
                 <p><strong>Warehouse:</strong> <span id="warehouse-name"></span></p>
             </div>
-            <div class="table-container", style="overflow-x: auto;">
-                <table class="table table-striped" id="dataTable">
+            <!-- full width table -->
+            <div class="table-responsive">  
+                <table class="table table-striped table-bordered table-hover shadow-lg">
                     <thead>
                         <tr>
                             {% if is_from_all %}
@@ -101,7 +102,7 @@
                             {% for store_name, store in data.0.store_quantities.items %}
                             <th style="max-width: 10ch; overflow: hidden; text-overflow: ellipsis;">{{ store_name }}</th>
                             {% endfor %}
-                            <th>Left in Warehouse</th>
+                            <th>Left</th>
                             <th>Shelf</th>
                             <th>Actions</th>
                             {% endif %}
@@ -116,6 +117,7 @@
                             <td class="text-left">{{ entry.product_name }}</td>
                             <td>{{ entry.ostatok }}</td>
                             {% for store_name, quantity in entry.store_quantities.items %}
+                            <!-- HTML -->
                             <td>
                                 <div class="quantity-controls">
                                     <button type="button" class="btn btn-outline-danger btn-sm decrement" data-store="{{ store_name }}" data-product="{{ entry.product_id }}">
