--- a/templates/store/Store.html
+++ b/templates/store/Store.html
@@ -54,8 +54,8 @@
                 <table class="table table-bordered">
                     <thead>
                         <tr>
-                            <th>Names</th>
-                            <th>Quantity</th>
+                            <th>Artikul</th>
+                            <th>Vitrina</th>
                         </tr>   
                     </thead>
                     <tbody>
