--- a/templates/store/store_warehouse.html
+++ b/templates/store/store_warehouse.html
@@ -93,9 +93,9 @@
   <table class="table table-bordered">
     <thead>
       <tr>
-        <th>📦 Product Name</th>
-        <th>🏢 Warehouse Quantity</th>
-        <th>🏬 Store Quantity</th>
+        <th>📦Aboi nomi</th>
+        <th>🏢 Sklad</th>
+        <th>🏬 Vitrina</th>
       </tr>
     </thead>
     <tbody>
